fixed scrollbar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -65,9 +65,11 @@ body {
 
 //custom scrollbar
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 12px;
 }
-
+*:hover::-webkit-scrollbar {
+  width: 8px;
+}
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   background: var(--negative-grey);
@@ -75,7 +77,6 @@ body {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-
   background: var(--strong-grey);
 }
 
